# Emoji-Nuker

./: .gitignore  LICENSE  Makefile  README.md  install.sh  installer.sh  pyproject.toml  setup.py  test_substitution.py  uninstaller.sh
.github/workflows/: test.yml
man/: emoji-nuker.1
src/: emoji-nuker  emoji_lut.py  emoji_nuker.py
